<resources>
    <string name="app_name">PostoGasolina</string>
    <string name="partner">Seja Bem-Vindo</string>
    <string name="name_station_menu">Posto ISL WYDEN</string>
    <string name="litros">Litros Vendidos:</string>
    <string name="resultado">Valor:</string>
    <string name="preco_litro">Preço do Litro:</string>
    <string name="tipo_combustivel">Tipo de Combustível:</string>
    <string name="forma_pagamento"> Forma de Pagamento:</string>
    <string name="numero">Número :</string>
    <string name="cep">CEP :</string>
    <string name="gasoline">Gasolina</string>
    <string name="ethanol"> Etanol</string>
    <string name="franquia">Franquia</string>
    <string name="shell">Shell - 5,46</string>
    <string name="dubai">Dubai  - 5,49</string>
    <string name="bonazo">Bonazo  - 5,48</string>
    <string name="ipiranga">Ipiranga - 5,31</string>
    <string name="americano">Americano - 5,49</string>
    <string name="calcular">Calcular</string>
</resources>


